--- a/src/app/core/components/title-bar/title-bar.component.html
+++ b/src/app/core/components/title-bar/title-bar.component.html
@@ -1,4 +1,4 @@
 <div>
-  <!-- <button mat-button (click)="onSave.emit()">Save</button> -->
-  <button mat-button (click)="onOpenStore.emit()">Store</button>
+  <a mat-button routerLink="">Return</a>
+  <a mat-button routerLink="click-store">Store</a>
 </div>
