Jeu pas mal terminé

--- a/src/app/core/components/click-area/click-area.component.html
+++ b/src/app/core/components/click-area/click-area.component.html
@@ -1,3 +1,6 @@
-<button (click)="addPoints()">
+<button (click)="addPoints(); addCombo()">
+  <mat-progress-bar mode="determinate" [value]="combo"></mat-progress-bar>
+  <br />
+  <strong>x{{ combo / 20 }}</strong>
   <h1>{{ points }}</h1>
 </button>
