--- a/src/app/core/components/click-area/click-area.component.scss
+++ b/src/app/core/components/click-area/click-area.component.scss
@@ -1,12 +1,13 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   button {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border: none;
     background-color: transparent;
+
+    h1 {
+      padding-top: 35vh;
+      padding-bottom: 40vh;
+    }
   }
 }
