--- a/src/app/core/components/title-bar/title-bar.component.scss
+++ b/src/app/core/components/title-bar/title-bar.component.scss
@@ -1,8 +1,15 @@
 :host {
   div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding: 12px;
     background-color: lightgray;
     box-shadow: 1px 1px 10px lightgray;
+
+    button {
+      margin-right: 24px;
+    }
   }
 }
